examples/test/testpolicy17147.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17147
  namespace: namespace321
spec:
  podSelector:
    matchLabels:
      key5: value33
      key40: value24
      key1: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value6
          key6: value11
          key32: value16
      podSelector:
        matchLabels:
          key33: value40
